# serializer version: 1
# name: test_get_one[session-async-tracked-aiosqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.name = ?
  '''
# ---
# name: test_get_one[session-async-tracked-asyncmy_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.name = %s
  '''
# ---
# name: test_get_one[session-async-tracked-asyncpg_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.name = $1::VARCHAR
  '''
# ---
# name: test_get_one[session-async-tracked-psycopg_async_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.name = %(name_1)s::VARCHAR
  '''
# ---
# name: test_get_one[session-sync-tracked-psycopg_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.name = %(name_1)s::VARCHAR
  '''
# ---
# name: test_get_one[session-sync-tracked-sqlite_engine]
  '''
  SELECT color.name,
         color.id
    FROM color AS color
   WHERE color.name = ?
  '''
# ---
